<resources>
    <string name="app_name">ContentResolverDemo</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="sex">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="number">待操作的学号</string>
    <string name="add">添加</string>
    <string name="query">查看</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
</resources>
