<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/age_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        />

    <RadioGroup
        android:id="@+id/sex_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            />

        <RadioButton
            android:id="@+id/male_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="18sp"
            />

        <RadioButton
            android:id="@+id/female_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="18sp"
            />

    </RadioGroup>

    <EditText
        android:id="@+id/number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insert_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/query_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/query"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/update_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:textSize="18sp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/parse_uriMatcher_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="利用UriMatcher去解析Uri"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/parse_uri_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="利用Uri去解析uri"
        android:textAllCaps="false"
        />

    <ListView
        android:id="@+id/data_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>